fix(prediction): fixed wrong param

--- a/Murder+Mystery.ipynb
+++ b/Murder+Mystery.ipynb
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,10 +145,10 @@
     "        self.author = author\n",
     "        self.prepared_text = prepare_text(text)\n",
     "        self.word_count_frequency = build_frequency_table(self.prepared_text)\n",
-    "        self.ngram_frequency = ngram_creator(self.prepared_text)\n",
+    "        self.ngram_frequency = build_frequency_table(ngram_creator(self.prepared_text))\n",
     "        \n",
     "    def __repr__(self):\n",
-    "        return(\"The author {} has an average sentence length of {}\").format(self.author, self.average_sentence_length)\n"
+    "        return(\"{} has an average sentence length of {}\").format(self.author, self.average_sentence_length)\n"
    ]
   },
   {
@@ -168,17 +168,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The author Murderer has an average sentence length of 112.8\n",
-      "The author Lily Trebuchet has an average sentence length of 117.07692307692308\n",
-      "The author Myrtle Beech has an average sentence length of 36.666666666666664\n",
-      "The author Gregg T Fishy has an average sentence length of 117.3\n"
+      "Murderer has an average sentence length of 112.8\n",
+      "Lily Trebuchet has an average sentence length of 117.07692307692308\n",
+      "Myrtle Beech has an average sentence length of 36.666666666666664\n",
+      "Gregg T Fishy has an average sentence length of 117.3\n"
      ]
     }
    ],
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +446,7 @@
     "    sentence_length_difference = percent_difference(Text_Sample1.average_sentence_length, Text_Sample2.average_sentence_length)\n",
     "    sentence_length_similarity = abs(1 - sentence_length_difference)\n",
     "    word_count_similarity = frequency_comparison(Text_Sample1.word_count_frequency, Text_Sample2.word_count_frequency)\n",
-    "    ngram_similarity = len(Text_Sample1.ngram_frequency) - len(Text_Sample2.ngram_frequency)\n",
+    "    ngram_similarity = frequency_comparison(Text_Sample1.ngram_frequency, Text_Sample2.ngram_frequency)\n",
     "\n",
     "    return (sentence_length_similarity + word_count_similarity + ngram_similarity) / 3\n",
     "    "
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 110,
    "metadata": {
     "scrolled": false
    },
@@ -475,9 +475,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The author Lily Trebuchet has an average sentence length of 117.07692307692308 has a probability 10.345736849150047 of being the murder\n",
-      "The author Myrtle Beech has an average sentence length of 36.666666666666664 has a probability 47.3395777579542 of being the murder\n",
-      "The author Gregg T Fishy has an average sentence length of 117.3 has a probability 39.67970447631465 of being the murder\n"
+      "Lily Trebuchet has an average sentence length of 117.07692307692308 has a probability 0.3457368491500468 of being the murder\n",
+      "Myrtle Beech has an average sentence length of 36.666666666666664 has a probability 0.006244424620874156 of being the murder\n",
+      "Gregg T Fishy has an average sentence length of 117.3 has a probability 0.3463711429813125 of being the murder\n"
      ]
     }
    ],
@@ -520,7 +520,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lily Trebuchet"
+    "Gregg T Fishy"
    ]
   },
   {
